zacatek login okna

--- a/index.html
+++ b/index.html
@@ -4,18 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/PCSProject/style.css">
 </head>
+
+
+
 <body>
-    <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis dolore itaque repudiandae nesciunt sunt temporibus ducimus atque
-    delectus corporis inventore obcaecati quae, aliquid quaerat natus error tempore debitis ipsa. Sequi.
-    </p>
+    <header>
+        <p>Jsem header</p>
+    </header>
 
-    <button> Přihlásit se</button>
+    <main class="container">
+        <form action="/PCSProject" method="post">
+                <h1>Přihlásit se</h1>
+                <input type="email" name="email" placeholder="E-mail" autofocus>
 
-    <p>
-        Ahoj! Změna
-    </p>
+        </form>
+    </main>
+    
     
 </body>
 </html>
